# reaction-diffusion

./: Cargo.toml  README.md
.github/workflows/: ci.yml
assets/: index.html  main.js  styles.css
src/: app.rs  config.rs  diffusion.rs  diffusion.wgsl  event.rs  lib.rs  log.rs  main.rs  shader.wgsl
