[package]
name = "reaction-diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
rand = "0.8.5"
wgpu = "0.19.4"
winit = "0.30.4"
