[package]
name = "reaction-diffusion"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
console_error_panic_hook = "0.1.7"
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
wgpu = "0.19.4"
winit = "0.30.4"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
